segundo commit Realizado

--- a/Proyecto-de-pruebas/index.html
+++ b/Proyecto-de-pruebas/index.html
@@ -4,6 +4,7 @@
         <title>Mi primer pagina web</title>
     </head>
     <body>
+        <title>Mi primer pagina</title>
         Hola mundo
         <h1>Encabezado 1</h1>
         <p>Parrafo 1</p>
