Tercer commit realizado

--- a/Proyecto-de-pruebas/index.html
+++ b/Proyecto-de-pruebas/index.html
@@ -2,23 +2,40 @@
 <html>
     <head>
         <title>Mi primer pagina web</title>
+        <link rel="stylesheet" href="Estilos.css">
     </head>
     <body>
-        <title>Mi primer pagina</title>
-        Hola mundo
-        <h1>Encabezado 1</h1>
-        <p>Parrafo 1</p>
-        <p>Parrafo nuevo</p>
-        <ol>
-            <li>Elemento 1</li>
-            <li>Elemento 2</li>
-            <li>Elemento 3</li>
-        </ol>
-        <h2>Encabezado 2</h2>
-        <h3>Encabezado 3</h3>
-        <h4>Encabezado 4</h4>
-        <h5>Encabezado 5</h5>
-        <h6>Encabezado 6</h6>
-
+<div>
+    <br><br><br>
+<h1>La Fantastica Aventura de Pee y su Kima</h1>
+<br><br>
+<img src="Gato pee.jpg" alt="Mii pee">
+<a href="https://google.com.ar"target="_blank">Este enlace te llevara a google</a>
+<p id="Parrafo-Especial">Soy un gato llamado Mbappe que como veran soy muy precioso igual a mi dueño que esta lejos de aca por que la pinche humana que esta acargo
+    de mi no me quiso llevar con el por que siempre le doy amor ella me cuida y me ama es un poco pesada por que yo siempre hago travesuras
+    y desde pequeño me gusta husmear por el tacho que contiene cosas deliciosas nose por que tiran esos manjares que no se comen, en fin 
+    cosas de humanos &#128580; mientras tanto mi fiel compañera Kima que tiene cara de loca pero es tierna no le gusta la precencia
+    de humanos y es bien especial bueno hasta aqui les he contado un poco de mi vida luego contare mas de mis aventuras &#x1F601; <br>
+</p>
+</div>
+<hr>
+<div>
+    <h1>Encabezado 1</h1>
+    <p class="Parrafo">Parrafo 1</p>
+    <ol>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+    </ol>
+    <h2>Encabezado 2</h2>
+    <p class="Parrafo">Parrafo nuevo</p>
+    <h3>Encabezado 3</h3>
+    <h4>Encabezado 4</h4>
+    <h5>Encabezado 5</h5>
+    <h6>Encabezado 6</h6>
+</div>
+<footer>
+    Creado por M-T-R Records
+</footer>
     </body>
 </html>
